RESOLVED FIXED125447
[EFL][WK2] LayoutTests are broken after r160301
https://bugs.webkit.org/show_bug.cgi?id=125447
Summary [EFL][WK2] LayoutTests are broken after r160301
Ryuan Choi
Reported 2013-12-09 05:44:55 PST
I moved FullScreenManagerProxyClient logic to WebViewEfl, child class of CoordinatedGraphics::WebView) because implementations are EFL specific. However, CoordinatedGraphics::WebView creates WebPageProxy in constructor and WebPageProxy requires FullScreenManagerProxyClient in constructor. So, All WK2/Efl based applications got crashed with below message. pure virtual method called terminate called without an active exception I will add virtual methods for Full Screen to CoordinatedGraphics so that WebPageProxy can get FullScreenManagerProxyClient instance without pure viertual methods.
Attachments
Patch (6.75 KB, patch)
2013-12-09 05:54 PST, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2013-12-09 05:54:18 PST
WebKit Commit Bot
Comment 2 2013-12-09 11:27:44 PST
Comment on attachment 218753 [details] Patch Clearing flags on attachment: 218753 Committed r160321: <http://trac.webkit.org/changeset/160321>
WebKit Commit Bot
Comment 3 2013-12-09 11:27:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.